--- a/index.html
+++ b/index.html
@@ -1,89 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ameck Company Ltd - Invoice Generator</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background-color: #f9f9f9; }
-    header { text-align: center; margin-bottom: 20px; }
-    .invoice-type { float: right; }
-    .company-info { margin-bottom: 20px; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    .actions { margin-top: 20px; }
-  </style>
-</head>
-<body>
-  <header>
-    <img src="ameck-logo.png" alt="Ameck Logo" style="width: 120px;"><br>
-    <strong>AMECK COMPANY LIMITED</strong><br>
-    Main Office: Kahama, Shinyanga – P.O. Box 477<br>
-    Branches: Tabora Town, Dar es Salaam<br>
-    Services: Civil & Building Supplies, Stationery & Computer Consumables, Printing Services<br>
-    Phone: 0760 227 650 / 0744 426 972
-  </header>
-
-  <div class="invoice-type">
-    <label for="docType">Document Type:</label>
-    <select id="docType">
-      <option value="proforma">Proforma Invoice</option>
-      <option value="tax">Tax Invoice</option>
-      <option value="delivery">Delivery Note</option>
-    </select>
-  </div>
-
-  <div class="company-info">
-    <label>Client Name: <input type="text" id="clientName" /></label><br><br>
-    <label>Description: <input type="text" id="description" /></label><br><br>
-    <label>Amount (TZS): <input type="number" id="amount" /></label>
-  </div>
-
-  <div id="invoiceOutput">
-    <!-- Generated invoice will appear here -->
-  </div>
-
-  <div class="actions">
-    <button onclick="generateInvoice()">Generate Invoice</button>
-    <button onclick="downloadPDF()">Download as PDF</button>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script>
-    function generateInvoice() {
-      const client = document.getElementById("clientName").value;
-      const desc = document.getElementById("description").value;
-      const amt = document.getElementById("amount").value;
-      const type = document.getElementById("docType").value;
-      const title = {
-        proforma: "Proforma Invoice",
-        tax: "Tax Invoice",
-        delivery: "Delivery Note"
-      }[type];
-
-      const html = \`
-        <h2>\${title}</h2>
-        <table>
-          <tr><th>Client Name</th><td>\${client}</td></tr>
-          <tr><th>Description</th><td>\${desc}</td></tr>
-          <tr><th>Amount (TZS)</th><td>\${amt}</td></tr>
-        </table>
-      \`;
-      document.getElementById("invoiceOutput").innerHTML = html;
-    }
-
-    function downloadPDF() {
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-      doc.html(document.body, {
-        callback: function (pdf) {
-          pdf.save("invoice.pdf");
-        },
-        x: 10,
-        y: 10
-      });
-    }
-  </script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Ameck Invoice</title></head><body><h1>Invoice Generator</h1></body></html>
